Improve website (catcher zones)

--- a/org.jrebirth.af/src/site/resources/css/homepage.css
+++ b/org.jrebirth.af/src/site/resources/css/homepage.css
@@ -1,20 +1,6 @@
-/*----------------------------------*/
+﻿/*----------------------------------*/
 /*			Home¨Page				*/
 /*----------------------------------*/
-
-div#catcher_block h1 {
-	font-size:44px;
-	margin: 15px 80px 15px 80px;
-	float: left;
-}
-
-div#catcher_block div.catchme {
-	float:left;
-	font-size:24px;
-	line-height:30px;
-	padding-top:15px;
-	padding-left:40px;
-}
 
 div#features {
 	float : left;
