--- a/org.jrebirth.af/src/site/xdoc/index.xml.vm
+++ b/org.jrebirth.af/src/site/xdoc/index.xml.vm
@@ -236,14 +236,13 @@
 	
 		<!-- id="ohloh" -->
 		<div id="ohloh">
+			
 			<div>
-				<script type="text/javascript" src="http://www.openhub.net/p/599672/widgets/project_users.js?style=blue"></script>
-			</div>
-			<!--
-			<div>
+				<script type="text/javascript" src="http://www.openhub.net/p/599672/widgets/project_basic_stats.js"></script>
 				<script type="text/javascript" src="http://www.openhub.net/p/599672/widgets/project_thin_badge.js"></script>
+				<script type="text/javascript" src="http://www.openhub.net/p/599672/widgets/project_users_logo.js"></script>
 			</div>
-			-->
+			
 			
 			<div id="pp">
 				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
