--- a/org.jrebirth.af/src/site/markdown/doc/Notifier.md.vm
+++ b/org.jrebirth.af/src/site/markdown/doc/Notifier.md.vm
@@ -10,25 +10,14 @@
 
 <!-- MACRO{toc|section=0|fromDepth=1|toDepth=4} -->
         
-Component definition
+Messaging engine
 =========================
 
-A component is a top-level actor of the __wB-CS-Mvc__ pattern.
-
-Each component can communicate with other in a simple way. 
-They are loosely coupled with each other and with the engine itself.
-
-There are 3+1 kinds of components:
-
-* Command
-* Service
-* Model
-* Behavior
-
-Wave, View and Controller are not JRebirth Components.
+JRebirth provides its own event bus to manage asynchronous communication between all components.
+Synchronous communication can be achieved by using direct method call.
 
 <div class="uml">
-	<a href="uml/Link.png" rel="lightbox" title="Command Class Diagram ">
+	<a href="uml/Link.png" rel="lightbox" title="Notifier Class Diagram ">
 		<img class="redux" src="uml/Link.png" alt="" />
 	</a>
 	<legend>Communication Engine - Class Diagram</legend>
@@ -46,14 +35,5 @@ We will have an overview of them within the next section.
 
 
 
-<div class="bottomLinks">
-	<div class="previousDocPage">
-		<a href="Facades.html">How Facades work</a>
-	</div>
-	<div class="nextDocPage">
-		<a href="Wave.html">Wave</a>
-	</div>
-	<div class="tocDocPage">
-		<a href="Toc.html">TOC</a>
-	</div>
-</div>
+#parse("TocList.vm")
+#displayFooterToc("Notifier")
