--- a/org.jrebirth.af/src/site/markdown/doc/Resources.md.vm
+++ b/org.jrebirth.af/src/site/markdown/doc/Resources.md.vm
@@ -109,14 +109,5 @@ Hereafter the enumeration that stores font names.
 <!-- MACRO {include|source=core/src/test/java/org/jrebirth/af/core/resource/font/TestFontNames.java|snippet=aj:..TestFontNames}-->
 
 
-
-
-<div class="bottomLinks">
-	<div class="previousDocPage">
-		<a href="Behavior.html">Behavior</a>
-	</div>
-	<!--<div class="nextDocPage"><a href="Notifier.html">Notifier &amp; Wave</a></div> -->
-	<div class="tocDocPage">
-		<a href="Toc.html">TOC</a>
-	</div>
-</div>
+#parse("TocList.vm")
+#displayFooterToc("Resources")
