--- a/org.jrebirth.af/src/site/markdown/doc/Logging.md.vm
+++ b/org.jrebirth.af/src/site/markdown/doc/Logging.md.vm
@@ -117,14 +117,5 @@ All these log messages are store into an interface implemented by the class to l
 <!-- MACRO{include|source=core/src/main/java/org/jrebirth/af/core/concurrent/ConcurrentMessages.java|snippet=aj:ConcurrentMessages}-->
 
 
-<div class="bottomLinks">
-    <div class="previousDocPage">
-        <a href="Thread.html">Thread Management</a>
-    </div>
-    <div class="nextDocPage">
-        <a href="Facades.html">How Facades work</a>
-    </div>
-    <div class="tocDocPage">
-        <a href="Toc.html">TOC</a>
-    </div>
-</div>
+#parse("TocList.vm")
+#displayFooterToc("Logging")
