Refactor DockPane & TabbedPane components

--- a/org.jrebirth.af/component/src/main/resources/styles/JRebirthComponentsDefault.css
+++ b/org.jrebirth.af/component/src/main/resources/styles/JRebirthComponentsDefault.css
@@ -2,11 +2,11 @@
 /** 				. 												*/
 /********************************************************************/
 
-.HorizontalTabbedContainer{
+TabbedPane.HorizontalTabbedPane {
 	-fx-background-color: yellow;
 }
 
 
-.VerticalTabbedContainer{
-	-fx-background-color: yellow;
+TabbedPane.VerticalTabbedPane{
+	-fx-background-color: orange;
 }
