--- a/org.jrebirth.af/showcase/workbench/src/main/resources/styles/JRebirthWorkbenchDefault.css
+++ b/org.jrebirth.af/showcase/workbench/src/main/resources/styles/JRebirthWorkbenchDefault.css
@@ -2,30 +2,62 @@
 /** 				. 												*/
 /********************************************************************/
 
-.split-pane > .split-pane-divider {
-    -fx-padding: 0 0.5em 0 0.5em; /* 0 3 0 3 */
-	-fx-background-color: red;
+.root {
+	bgClear: #fff;
+	bg: #ccc;
 }
 
-.HorizontalTabbedContainer{
+.split-pane > .split-pane-divider {
+    -fx-padding: 0 0.25em 0 0.25em; /* 0 3 0 3 */
+	-fx-background-color: bg;
+}
+
+TabbedPane.HorizontalTabbedPane {
+	-fx-background-color: yellow;
+}
+
+
+TabbedPane.VerticalTabbedPane {
 	-fx-background-color: black;
 }
 
-
-.VerticalTabbedContainer{
-	-fx-background-color: orange;
-}
-
-
-BorderPane.TabModel{
+TabbedPane.TabModel{
 	
 	-fx-background-color: cyan;
 }
 
-BorderPane.Top StackPane{
-	-fx-background-color: yellow;
+TabbedPane BorderPane HBox {
+	-fx-background-color: bg;
+}
+TabbedPane BorderPane VBox {
+	-fx-background-color: bg;
 }
 
-BorderPane.Bottom StackPane{
-	-fx-background-color: grey;
+TabbedPane HBox ToggleButton, TabbedPane VBox ToggleButton {
+	-fx-border-color: aquamarine ;
+	-fx-border-style: solid ;
+	-fx-border-width: 1 1 0 1;
+	-fx-border-insets: 2 0 0 0;
+	-fx-border-radius: 5 5 0 0;
+	-fx-padding: 0 10 0 10;
+}
+
+TabbedPane HBox ToggleButton:selected, TabbedPane VBox ToggleButton:selected {
+	-fx-background-color: bgClear;
+}
+
+
+TabbedPane{
+	-fx-background-color: bg;
+}
+
+TabbedPane.Top StackPane{
+	-fx-background-color: bgClear;
+	-fx-background-radius: 10;
+}
+
+TabbedPane.Bottom StackPane{
+	-fx-background-color: bgClear;
+	-fx-background-radius: 10;
+	
 }
